[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "torch",
    "torchvision",
    "torchaudio",
    "transformers>=5.3.0",
    "sentence-transformers>=5.2.3",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "opencv-python>=4.13.0.92",
    "nltk>=3.9.3",
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]
torchvision = [{ index = "pytorch-cu130" }]
torchaudio = [{ index = "pytorch-cu130" }]
